# data-lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  TASKS.md  TECHNICAL.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  fastmcp.json  instructions.md  pyproject.toml  sample_ecommerce_data.csv  sample_employee_data.csv  sample_stock_prices.csv  server.json  server.py  setup_claude_desktop.sh  test_sales.csv
.github/workflows/: publish-mcp.yml  publish-pypi.yml  publish.yml  test.yml
src/data_lens/: __init__.py  config.py  errors.py  main.py  server.py
src/data_lens/database/: __init__.py  client.py
src/data_lens/models/: __init__.py  query.py  schema.py
src/data_lens/services/: __init__.py  file_loader.py  query_service.py  schema_service.py
tests/: test_file_loader.py  test_integration.py  test_query_service.py  test_schema_service.py  test_server.py
